# company_reasearch_tool

./: .env  .gitignore  Makefile  README.md  main.py  pyproject.toml
app/agent/: base_agent.py  critic_agent.py  github_agent.py  graph.py  orchestrator.py  research_agent.py  sanitizer.py  state.py  synthesis_agent.py  tool_registry.py  tools.py
app/api/: query.py  research.py
app/config/: settings.py
app/core/: dependencies.py  models.py
app/ingestion/: chunking.py  deduplicator.py  embedding.py  github_client.py  pipeline.py  qdrant_client.py  scraper.py
app/observability/: costlogger.py  tracer.py
app/rag/: retriever.py
