[project]
name = "company-reasearch-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "fastembed>=0.8.0",
    "langchain>=1.2.18",
    "langchain-groq>=1.1.2",
    "langfuse>=4.6.1",
    "langgraph>=1.1.10",
    "logger>=1.4",
    "pydantic-settings>=2.14.0",
    "qdrant-client>=1.17.1",
    "trafilatura>=2.0.0",
    "uvicorn>=0.46.0",
]
